--- a/www/css/index.css
+++ b/www/css/index.css
@@ -121,3 +121,11 @@ h1 {
 .hidden {
     display: none;
 }
+
+.codeArea {
+    display: block;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
