--- a/www/css/index.css
+++ b/www/css/index.css
@@ -106,6 +106,11 @@ h1 {
     display: none;
 }
 
+.icon32img {
+    width: 30%;
+    height: 30%
+}
+
 .codeArea {
     font-size: 18px;
     display: block;
@@ -116,3 +121,4 @@ h1 {
        -moz-box-sizing: border-box;
             box-sizing: border-box;
 }
+
